parse-display-tests/tests/compile_fail/display_struct_empty_field_ident.rs
use parse_display::Display;

#[derive(Display)]
#[display("{}")]
struct TestStruct;

fn main() {}
